--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.3.0",
     "eslint-config-prettier": "^10.0.1",
+    "mongodb": "^6.12.0",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "prettier": "^3.4.2",
