--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.3.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "eslint-config-prettier": "^10.0.1",
     "mongodb": "^6.12.0",
     "next": "15.1.6",
