--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "eslint-config-prettier": "^10.0.1",
     "mongodb": "^6.12.0",
     "next": "15.1.6",
@@ -27,6 +28,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.3.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
   },
