--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "strict": false,
     "noEmit": true,
     "incremental": true,
+    "strictFunctionTypes": false,  // ✅ Allows more flexible function typing
+    "noUncheckedIndexedAccess": false, // ✅ Helps avoid weird TS issues
+    "strictNullChecks": false , // ✅ Temporarily disable for debugging,
     "module": "esnext",
     "esModuleInterop": true,
     "moduleResolution": "node",
