--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "prisma generate && next build",
+    "start": "next start"
   },
   "packageManager": "npm@10.5.2",
   "overrides": {
@@ -35,7 +34,7 @@
     "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.2.0",
     "@types/node": "22.12.0",
     "@types/react": "19.0.8",
     "autoprefixer": "^10.4.20",
