--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "eslint-config-prettier": "^10.0.1",
     "mongodb": "^6.12.0",
     "next": "^15.1.6",
@@ -31,12 +32,15 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "stripe": "^17.6.0",
+    "swiper": "^11.2.2",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@types/node": "22.12.0",
     "@types/react": "19.0.8",
+    "@types/swiper": "^5.4.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
