--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "eslint-config-prettier": "^10.0.1",
+    "framer-motion": "^12.3.1",
     "mongodb": "^6.12.0",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
