--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.3.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "eslint-config-prettier": "^10.0.1",
     "framer-motion": "^12.3.1",
+    "googleapis": "^144.0.0",
     "mongodb": "^6.12.0",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.3.0",
@@ -40,6 +45,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@types/node": "22.12.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.8",
     "@types/swiper": "^5.4.3",
     "autoprefixer": "^10.4.20",
