--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongodb": "^6.12.0",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -41,7 +42,8 @@
     "react-icons": "^5.4.0",
     "stripe": "^17.6.0",
     "swiper": "^11.2.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
