--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,7 +15,7 @@
         "purpose": "any maskable"
       },
       {
-        "src": "/Splash.png",
+        "src": "/icon1.png",
         "sizes": "512x512",
         "type": "image/png",
         "purpose": "any maskable"
