--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,17 +8,29 @@
     "theme_color": "#000000",
     "scope": "/",
     "icons": [
+        {
+            "src": "/icon.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+          },
+          {
+            "src": "/icon.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any"
+          },
       {
-        "src": "/icon.png",
-        "sizes": "192x192",
+        "src": "/icon1.png",
+        "sizes": "512x512",
         "type": "image/png",
-        "purpose": "any maskable"
+        "purpose": "maskable"
       },
       {
         "src": "/icon1.png",
         "sizes": "512x512",
         "type": "image/png",
-        "purpose": "any maskable"
+        "purpose": "any"
       }
     ],
     "screenshots": [
