--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "stripe": "^17.6.0",
     "swiper": "^11.2.2",
     "typescript": "^5.7.3",
-    "workbox-webpack-plugin": "^7.3.0"
+    "workbox-webpack-plugin": "^7.3.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
