--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@emailjs/browser": "^4.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.3.0",
+    "@prisma/client": "^6.4.1",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
+    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "eslint-config-prettier": "^10.0.1",
     "framer-motion": "^12.4.7",
     "googleapis": "^144.0.0",
@@ -31,6 +36,7 @@
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
