--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "stripe": "^17.6.0",
     "swiper": "^11.2.2",
     "typescript": "^5.7.3",
+    "uuid": "^11.1.0",
     "workbox-webpack-plugin": "^7.3.0",
     "zustand": "^5.0.3"
   },
