--- a/package.json
+++ b/package.json
@@ -30,22 +30,22 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "eslint-config-prettier": "^10.0.1",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.4.10",
     "googleapis": "^144.0.0",
     "mongodb": "^6.12.0",
-    "next": "^15.1.6",
+    "next": "^15.2.1",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.3.0",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "recharts": "^2.12.7",
     "stripe": "^17.6.0",
     "swiper": "^11.2.2",
     "typescript": "^5.7.3",
@@ -69,6 +69,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.7.0",
     "postcss": "^8.5.1",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.5"
   }
