--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "^15.2.1",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
+    "next-seo": "^6.6.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "prettier": "^3.4.2",
