--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "stripe": "^17.6.0",
     "swiper": "^11.2.2",
