--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "typescript": "^5.7.3",
     "uuid": "^11.1.0",
     "workbox-webpack-plugin": "^7.3.0",
+    "zod": "^3.25.48",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
